--- a/SuperChat/MainWindow.xaml
+++ b/SuperChat/MainWindow.xaml
@@ -34,13 +34,15 @@
 
         <Border Grid.ColumnSpan="2"
                 Background="#252525"
-                MouseDown="Border_MouseDown">
+                MouseDown="Border_MouseDown"
+                CornerRadius="5">
             
             <Grid HorizontalAlignment="Stretch">
                 <Label Content="Chat"
                        HorizontalAlignment="Right"
                        Foreground="Gray"
-                       FontWeight="SemiBold"/>
+                       FontWeight="SemiBold"
+                      />
 
                 <StackPanel HorizontalAlignment="Left"
                             Orientation="Horizontal">
@@ -52,7 +54,8 @@
                                 BorderThickness="0"
                                 Foreground="PaleVioletRed"
                                 FontWeight="Bold"
-                                Click="CloseButton_Click"/>
+                                Click="CloseButton_Click"
+                            Margin="5,3,0,0"/>
 
                     <Button Width="20" Height="20"
                                 Content="⬤"
@@ -60,17 +63,19 @@
                                 BorderThickness="0"
                                 Foreground="PapayaWhip"
                                 FontWeight="Bold"
-                                Click="ButtonMinimize_Click"/>
-                    
+                                Click="ButtonMinimize_Click"
+                            Margin="5,3,0,0"/>
+
                     <Button Width="20" Height="20"
                                 Content="⬤"
                                 Background="Transparent"
                                 BorderThickness="0"
                                 Foreground="PaleGreen"
                                 FontWeight="Bold"
-                                Click="WindowStateButton_Click"/>
-                    
-                    
+                                Click="WindowStateButton_Click"
+                            Margin="5,3,0,0"/>
+
+
 
                 </StackPanel>
             </Grid>
@@ -91,6 +96,12 @@
                    FontWeight="Medium"
                    Foreground="Gray"
                    Margin="8"/>
+            <ListView ItemsSource="{Binding Contacts}"
+                      Background="Transparent"
+                      BorderThickness="0"
+                      Grid.Row="1"
+                      ItemContainerStyle="{StaticResource ContactCard}"/>
+
         </Grid>
     </Grid>
 </Window>
